# my-openenv

./: .gitignore  Dockerfile  OpenEnv-Hackathon.postman_collection.json  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
app/: env.py  grader.py  main.py  models.py  tasks.py  utils.py
server/: app.py
