[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-customer-support-resolution"
version = "1.0.0"
description = "OpenEnv-compatible AI customer support resolution environment"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenEnv Submission" }
]
license = { text = "MIT" }
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.12.5",
  "requests==2.32.3",
  "PyYAML==6.0.2",
  "httpx==0.27.2",
  "openai>=2.7.2"
]

[project.scripts]
server = "server.app:main"
